# Project-DJ-Engine

./: .clang-uml  .clangd  .gitattributes  .gitignore  ADD_SWIGS.cmake  AGENTS.md  ALBUM.cpp  ALBUM.h  ARCHITECTURE.md  AUDIOsrc.cmake  Binary_Save_Load_Main.h  BuildInitwithConan.bat  BuildInitwithConan.sh  CMakeLists.txt  CMakePresets.json  CURSOR.cpp  CURSOR.h  DBsrc.cmake  DOCUMENT_GENERATOR.sh  DeckWorker.cpp  DeckWorker.h  Disk_Jockey_Engine_Mini.vcxproj  Disk_Jockey_Engine_Mini.vcxproj.filters  Doxyfile  EDITORsrc.cmake  EngineCallBacks.h  Engine_Main.cpp  Engine_Main.h  GlobalStructs.h  HASH_COMPARE.sh  HOW_TO_VERIFY.md  MiniAudioWrapper.cpp  MiniAudioWrapper.h  PDJE_swig.i  PROJECT_STATE.md  Processor.cpp  Processor.h  README.md  RunClangFormat.sh  SETcmake.cmake  (+32 more)
.github/workflows/: autoTag.yml  autotrigtest.yml  cmake-multi-platform.yml
AGENT_DOCS/: ARCHITECTURE.md  CHANGE_MAP.md  CORE_RUNTIME.md  CORE_STYLE.md  DATA_CONTRACTS.md  DECISIONS.md  EDITOR_SYSTEM.md  GLOSSARY.md  INDEX.md  INPUT_SYSTEM.md  INVARIANTS.md  JUDGE_SYSTEM.md  KNOWN_GAPS.md  LIFECYCLES.md  NOW.md  PROJECT_SKILLS.md  TEST_MAP.md  UTIL_SYSTEM.md  VERIFY.md
BluePrint_PDJE/: 8PointValues.md  Audio_Render.md  BLUEPRINT_ROOT.md  Bpm.md  BpmBinary.md  CachedMixList.md  CapNProto.md  Composer.md  DB.md  DETAIL_ENUM.md  EVDEV.md  Ebar.md  Ebeat.md  Editor.md  EffectRender.md  Engine.md  Engines.md  Eseparate.md  FXMan.md  FaustObject.md  FullManualRender.md  Hybrid Render.md  ID.md  ITPL.md  Input Engine.md  Input.md  Judge Engine.md  Manual Render.md  ManualRender.md  MixBinary.md  MixMachine.md  MixTranslator.md  Music.md  MusicPath.md  NOTE_OBJ.md  Note Object.md  NoteBinary.md  Note_Detail.md  Note_Render.md  Note_Type.md  (+19 more)
BluePrint_PDJE/.obsidian/: community-plugins.json  graph.json  workspace.json
BluePrint_PDJE/function/: consume.md
BluePrint_PDJE/smart-chats/: .md
DEPRECATED/: EngineCallBacks.h  default_functions.h
DEPRECATED/core_header/: CURSOR.h  DeckWorker.h
DEPRECATED/data_structs/: dj_BSL.hpp
DEPRECATED/src/: Engine_Main.cpp  Processor.cpp  beat_compiler_extension.cpp
DEPRECATED/wrapper/: MiniAudioWrapper.cpp
DataExtract/: README.md  csv_extract.py  fullManualRes.txt  fullManualRes.txt_callbacks.csv  fullManualRes.txt_phase_stats.csv  fullPrerenderRes.txt  hybridRes.txt  hybridres.txt_callbacks.csv  hybridres.txt_phase_stats.csv  main.py  pyproject.toml  visualize_csv.py
GenCodes/OKL/: kernel.okl  okl_kernel_build.sh
SWIG_test/csharptest/: Program.cs  csharptest.csproj
SWIG_test/testSampleDatas/: for_testers.txt  tempdb.db
SoundTouch/: SoundTouch.vcxproj
cmakes/: ADD_SWIGS.cmake  BuildLog.cmake  BuildSubProc.cmake  FunctionSet.cmake  GenRTHASH.cmake  HalideSupport.cmake  OnnxRuntimePrebuilt.cmake  Options.cmake  SETcmake.cmake  findPackages.cmake  includeDIRS.cmake
cmakes/src/: AUDIOsrc.cmake  CRYPTOsrc.cmake  DBsrc.cmake  EDITORsrc.cmake  GLOBALsrc.cmake  INPUTsrc.cmake  IPCsrc.cmake  JUDGEsrc.cmake  UTILsrc.cmake
cmakes/tests/: DevTests.cmake  UnitTestRoot.cmake  UnitTests.cmake
core_include/db/: trackDB.cpp
core_include/interface/: PDJE_interface.hpp
core_include/tests/: highway_Test.cpp  logTest.cpp
docs/: .buildinfo  .buildinfo.bak  Core_Engine.html  Data_Lines.html  Developer_Onboarding.html  Editor_Format.html  Editor_Workflows.html  FX_ARGS.html  Getting Started.html  How_To_Use.html  Input_Engine.html  Judge_Engine.html  Note_Engine.html  PDJE_For_AI_Agents.html  PDJE_Format.html  PDJE_Path.html  PDJ_modules.html  Path_To_Core_Engine.html  Path_To_Input_Engine.html  Path_To_Note_Engine.html  Path_To_Util_Engine.html  Util_Engine.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  test.html
docs/.doctrees/: Core_Engine.doctree  Data_Lines.doctree  Developer_Onboarding.doctree  Editor_Format.doctree  Editor_Workflows.doctree  FX_ARGS.doctree  Getting Started.doctree  How_To_Use.doctree  Input_Engine.doctree  Judge_Engine.doctree  Note_Engine.doctree  PDJE_For_AI_Agents.doctree  PDJE_Format.doctree  PDJE_Path.doctree  PDJ_modules.doctree  Path_To_Core_Engine.doctree  Path_To_Input_Engine.doctree  Path_To_Note_Engine.doctree  (+5 more)
document_sources/: Core_Engine.rst  Data_Formats.rst  Data_Lines.rst  Developer_Onboarding.rst  Editor_Format.rst  FX_ARGS.rst  Getting Started.rst  How_To_Use.rst  Input_Engine.rst  Judge_Engine.rst  Note_Engine.rst  PDJE_Path.rst  Path_To_Core_Engine.rst  Path_To_Util_Engine.rst  Util_Engine.rst  conf.py  index.rst  mermaid_config.json
dox_out/: .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  test.html
engine_include/: EngineCallBacks.h  default_functions.h
engine_src/: ALBUM.cpp  CURSOR.cpp  Engine_Main.cpp  MiniAudioWrapper.cpp  PDJS.pb.cc  Processor.cpp  beat_compiler_extension.cpp  data_loader.cpp  sound_module.cpp
include/: FAKE_CAPNP_ENUMS_FOR_SWIG.hpp  PDJE_EXPORT_SETTER.hpp  PDJE_LOG_SETTER.hpp  SWIG_editor_visitor.hpp
jsoncpp/: CONTROL
scripts_for_distribution/: evdev_group_apply.sh
source/: How_To_Use.rst  conf.py
src/: DeckWorker.cpp  MiniAudioWrapper.cpp  sound_module.cpp
swig_csharp/: ARGSETTER.cs  ARGSETTER_WRAPPER.cs  DetailEnum.cs  DetailEnum_c6c88c32e11afb23.cs  EDIT_ARG_KEY_VALUE.cs  EDIT_ARG_MIX.cs  EDIT_ARG_MUSIC.cs  EDIT_ARG_NOTE.cs  FXControlPannel.cs  FXList.cs  ITPL_ENUM.cs  KEY_VEC.cs  KVVisitor.cs  MUS_VEC.cs  MixArgs.cs  MixVisitor.cs  MusicArgs.cs  MusicControlPannel.cs  MusicOnDeck.cs  MusicVisitor.cs  NoteArgs.cs  NoteVisitor.cs  PDJE.cs  PDJE_Name_Sanitizer.cs  PDJE_swigCSHARP_wrap.cxx  PDJE_swigCSHARP_wrap.h  PLAY_MODE.cs  STRING_PAIR.cs  SWIGTYPE_p_ARGSETTER.cs  SWIGTYPE_p_BIN.cs  SWIGTYPE_p_Decoder.cs  SWIGTYPE_p_DetailEnum.cs  SWIGTYPE_p_DiffResult.cs  SWIGTYPE_p_KEY_VALUE.cs  SWIGTYPE_p_MAYBE_MUS_VEC.cs  SWIGTYPE_p_MAYBE_TRACK_VEC.cs  SWIGTYPE_p_MixArgs.cs  SWIGTYPE_p_MusicArgs.cs  SWIGTYPE_p_MusicControlPannel.cs  SWIGTYPE_p_NoteArgs.cs  (+46 more)
swig_go/: PDJE_swigGO_wrap.cxx  pdje_POLYGLOT.go
swig_python/: PDJE_swigPYTHON_wrap.cxx  PDJE_swigPYTHON_wrap.h  pdje_POLYGLOT.py  test.py
tests/: t1.cpp  tmain.cpp
(+13884 files in other folders)
